<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/main_color"
        >
    <LinearLayout
            android:id="@+id/login_llFormInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="20dp"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/login_text_color"
                android:text="@string/user_name"
                android:id="@+id/login_tvUserName"
                android:textSize="20dp"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/login_text_color"
                android:background="@android:color/background_light"
                android:id="@+id/login_etUserName"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#010101"
                android:text="@string/password"
                android:id="@+id/login_tvPassWord"
                android:textSize="20dp"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/background_light"
                android:inputType="textPassword"
                android:textColor="@color/login_text_color"
                android:id="@+id/login_etPassWord"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:text="@string/login_btLogin"
                android:id="@+id/login_btLogin"
                />
    </LinearLayout>
</RelativeLayout>

